--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "engines": {
     "node": ">=10.16.3"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "ramda": "^0.27.0"
+  }
 }
