--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Group values of two objects by their key ",
   "main": "index.js",
+  "scripts": {
+    "test": "jest ."
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/saxjst/group-values-by-key.git"
@@ -21,5 +24,8 @@
   "keywords": [],
   "dependencies": {
     "ramda": "^0.27.0"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
   }
 }
